[package]
name = "fluvio-metrics-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# fluvio = { path = "../fluvio", default-features = false }
fluvio-spu = { path = "../fluvio-spu" }
fluvio-types = { path = "../fluvio-types" }


derive_more = "0.99.17"
tracing = "0.1.19"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0"
